--- a/css/index.css
+++ b/css/index.css
@@ -144,3 +144,45 @@ footer nav a {
     color: white;
     text-decoration: none;
 }
+
+/* My own styling */
+ 
+.top {
+    display: flex;
+    max-width: 800px;
+    margin-top: 30px;
+    align-items: baseline;
+}
+
+ ul, li{
+    display: flex;
+    margin-left: 20px;
+    justify-content: space-between;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+.menu{
+    max-width: 643px;
+    width: 643px;
+   
+}
+
+a{
+    text-decoration: none;
+    color: black;
+}
+
+ul{
+    max-width: 570px;
+}
+
+.top-content-image{
+    margin-top:30px;
+    margin-bottom: 25px;
+}
+
+p, h2 {
+    font-weight: bold;
+}
+
