--- a/css/index.css
+++ b/css/index.css
@@ -104,7 +104,7 @@ p {
 .middle-content .boxes .box {
     width: 12.5%;
     height: 100px;
-    background: black;
+    /* background: black; */
     margin: 20px 2.5%;
     color: white;
     display: flex;
@@ -184,5 +184,46 @@ ul{
 
 p, h2 {
     font-weight: bold;
+}
+
+.box-1 {
+    background-color: teal;
+}
+
+.box-2{
+    background-color: gold;
+}
+
+
+.box-3 {
+    background-color: cadetblue;
+}
+
+.box-4 {
+    background-color: coral;
+}
+
+.box-5 {
+    background-color: crimson;
+}
+
+.box-6 {
+    background-color: forestgreen;
+}
+
+.box-7 {
+    background-color: darkorchid;
+}
+
+.box-8 {
+    background-color: hotpink;
+}
+
+.box-9 {
+    background-color: indigo;
+}
+
+.box-10 {
+    background-color: dodgerblue;
 }
 
